<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VeryWeather</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="loading">Loading...</string>

    <!--SharedPreferences name strings-->
    <string name="weather_prefs">WEATHER_PREF</string>
    <string name="current_pref">CURRENT_PREF</string>
    <string name="forecast_pref">FORECAST_PREF</string>

    <!-- Titles for current condition screen -->
    <string name="cur_clouds_title">Cloudiness</string>
    <string name="cur_humidity_title">Humidity</string>
    <string name="cur_pressure_title">Pressure</string>
    <string name="cur_wind_title">Wind</string>
    <string name="cur_sun_title">Daylight</string>
    <string name="cur_sunrise">Sunrise</string>
    <string name="cur_sunset">Sunset</string>

    <!--Settings location-->
    <string name="pref_location">Location</string>
    <string name="pref_location_key">pref_location_key</string>
    <string name="pref_location_descr">Specify city ID</string>
    <string name="pref_location_default">625144</string>

    <!--Empty list text-->
    <string name="forecast_empty">Pull to load forecast</string>

    <!--Settings units-->
    <string name="pref_units">Units</string>
    <!--Temperature-->
    <string name="pref_temp_title">Temperature</string>
    <string name="pref_temp_key">pref_temp_key</string>
    <string name="pref_temp_desrc">Select temperature units</string>
    <string name="pref_temp_default">c</string>
    <!--Wind-->
    <string name="pref_wind_title">Wind</string>
    <string name="pref_wind_key">pref_wind_key</string>
    <string name="pref_wind_descr">Select wind speed units</string>
    <string name="pref_wind_default">ms</string>
    <!--Pressure-->
    <string name="pref_pressure_title">Pressure</string>
    <string name="pref_pressure_key">pref_pressure_key</string>
    <string name="pref_pressure_descr">Select atmospheric pressure units</string>
    <string name="pref_pressure_default">mb</string>

    <!--Settings forecast-->
    <string name="pref_forecast">Forecast</string>
    <string name="pref_forecast_key">pref_forecast_key</string>
    <string name="pref_forecast_title">Forecast</string>
    <string name="pref_forecast_descr">Days of forecast</string>
    <string name="pref_forecast_default">7</string>

    <!--Custom preference-->
    <string name="pref_custom_title">Custom preference</string>
    <string name="pref_custom_key">pref_custom_key</string>

</resources>
