<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CurrentActivity$CurrentFragment">

    <!--Current location and refresh time-->
    <TextView
        android:id="@+id/cur_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.08"
        android:textSize="24sp" />

    <!--Weather icon and current temperature-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.44"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/cur_icon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="0.75"
            android:src="@drawable/cur_weather_icon" />

        <TextView
            android:id="@+id/cur_temp_now"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:gravity="center"
            android:textSize="72sp" />

    </LinearLayout>

    <!--Current conditions description-->
    <TextView
        android:id="@+id/cur_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.08"
        android:textSize="24sp" />

    <!--Cloudiness-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.08"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:text="@string/cur_clouds_title"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/cur_clouds"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:textSize="20sp" />

    </LinearLayout>

    <!--Humidity-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.08"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:text="@string/cur_humidity_title"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/cur_humidity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:textSize="20sp" />

    </LinearLayout>

    <!--Wind-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.08"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:text="@string/cur_wind_title"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/cur_wind"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:textSize="20sp" />

    </LinearLayout>

    <!--Pressure-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.08"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:text="@string/cur_pressure_title"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/cur_pressure"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:textSize="20sp" />

    </LinearLayout>

    <!--Sunrise and sunset-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.08"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:text="@string/cur_sun_title"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/cur_sun"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>
