<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/cur_icon"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_margin="8dp"
        android:scaleType="centerCrop"
        android:src="@drawable/weather_haze" />

    <TextView
        android:id="@+id/cur_temp_now"
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_margin="8dp"
        android:layout_toRightOf="@+id/cur_icon"
        android:gravity="center"
        android:text="3°"
        android:textSize="96sp" />

    <TextView
        android:id="@+id/cur_description"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/cur_icon"
        android:gravity="center"
        android:text="light snow"
        android:textSize="24sp" />

    <android.support.v7.widget.CardView
                android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        card_view:cardCornerRadius="0dp"
        card_view:cardElevation="10dp">

        <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:orientation="vertical">

            <!-- Clouds -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/cur_clouds_title"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/cur_clouds"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical|end"
                    android:textSize="20sp" />

            </LinearLayout>

            <!-- Humidity -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/cur_humidity_title"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/cur_humidity"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical|end"
                    android:textSize="20sp" />

            </LinearLayout>

            <!-- Wind -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/cur_wind_title"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/cur_wind"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical|end"
                    android:textSize="20sp" />

            </LinearLayout>

            <!-- Pressure -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/cur_pressure_title"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/cur_pressure"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical|end"
                    android:textSize="20sp" />

            </LinearLayout>

            <!-- Sunrise -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/cur_sunrise"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/cur_sunrise"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical|end"
                    android:textSize="20sp" />

            </LinearLayout>

            <!-- Sunset -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/cur_sunset"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/cur_sunset"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical|end"
                    android:textSize="20sp" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>

